deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-beadando-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: k8s-beadando-backend-container
          image: ghcr.io/zalan0815/k8s_beadando-backend:1777016213
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: ghcr-auth-secret

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-beadando-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: k8s-beadando-frontend-container
          image: ghcr.io/zalan0815/k8s_beadando-frontend:1777016213
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ghcr-auth-secret

---

apiVersion: v1
kind: Service
metadata:
  name: backend-cluster-ip-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-cluster-ip-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-beadando-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: api-k8s-beadando-tofalvizalan.jcloud.jedlik.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-cluster-ip-service
                port:
                  number: 80

    - host: k8s-beadando-tofalvizalan.jcloud.jedlik.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-cluster-ip-service
                port:
                  number: 80
